LA-MCTS/parser/grammar/IGParser.py
# Generated from IG.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class IGParser ( Parser ):

    grammarFileName = "IG.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'END'", "'..'", "'['", "']'", "'('", 
                     "')'", "':'", "'{'", "'}'", "','", "'eta'", "'pi'", 
                     "'VAR'", "'REG'", "'HYBRID HOARE'", "'PRE'", "'TRACE'", 
                     "'POST'", "'CYCLIC'", "'True'", "'and'", "'slide'", 
                     "'noslide'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='", "';'", "'!'", "<INVALID>", "'>='", "'=>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "KVAR", "KREG", "KHYBRIDHOARE", "KPRE", 
                      "KTRACE", "KPOST", "KCYCLIC", "NOKB", "AND", "SLIDE", 
                      "NOSLIDE", "ID", "NUM", "FLOAT", "EQ", "SEMI", "NEG", 
                      "BOOL_OP", "SEUIL", "CIBLE", "OPER", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_var_block = 1
    RULE_var_decl = 2
    RULE_reg_block = 3
    RULE_reg_decl = 4
    RULE_reg_expr = 5
    RULE_hybrid_hoare_block = 6
    RULE_hybrid_hoare_decl = 7
    RULE_hybrid_hoare_pre_decl = 8
    RULE_hybrid_hoare_post_decl = 9
    RULE_discrete_condition = 10
    RULE_hybrid_condition = 11
    RULE_hybrid_hoare_trace_decl = 12
    RULE_hybrid_hoare_trace = 13
    RULE_hybrid_hoare_dpa = 14
    RULE_hybrid_hoare_slide = 15

    ruleNames =  [ "prog", "var_block", "var_decl", "reg_block", "reg_decl", 
                   "reg_expr", "hybrid_hoare_block", "hybrid_hoare_decl", 
                   "hybrid_hoare_pre_decl", "hybrid_hoare_post_decl", "discrete_condition", 
                   "hybrid_condition", "hybrid_hoare_trace_decl", "hybrid_hoare_trace", 
                   "hybrid_hoare_dpa", "hybrid_hoare_slide" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    KVAR=13
    KREG=14
    KHYBRIDHOARE=15
    KPRE=16
    KTRACE=17
    KPOST=18
    KCYCLIC=19
    NOKB=20
    AND=21
    SLIDE=22
    NOSLIDE=23
    ID=24
    NUM=25
    FLOAT=26
    EQ=27
    SEMI=28
    NEG=29
    BOOL_OP=30
    SEUIL=31
    CIBLE=32
    OPER=33
    WS=34
    COMMENT=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_block(self):
            return self.getTypedRuleContext(IGParser.Var_blockContext,0)


        def reg_block(self):
            return self.getTypedRuleContext(IGParser.Reg_blockContext,0)


        def hybrid_hoare_block(self):
            return self.getTypedRuleContext(IGParser.Hybrid_hoare_blockContext,0)


        def KCYCLIC(self):
            return self.getToken(IGParser.KCYCLIC, 0)

        def getRuleIndex(self):
            return IGParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = IGParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.var_block()
            self.state = 33
            self.reg_block()
            self.state = 34
            self.hybrid_hoare_block()
            self.state = 36
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==IGParser.KCYCLIC:
                self.state = 35
                self.match(IGParser.KCYCLIC)


            self.state = 38
            self.match(IGParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KVAR(self):
            return self.getToken(IGParser.KVAR, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IGParser.Var_declContext)
            else:
                return self.getTypedRuleContext(IGParser.Var_declContext,i)


        def getRuleIndex(self):
            return IGParser.RULE_var_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_block" ):
                listener.enterVar_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_block" ):
                listener.exitVar_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_block" ):
                return visitor.visitVar_block(self)
            else:
                return visitor.visitChildren(self)




    def var_block(self):

        localctx = IGParser.Var_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_var_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(IGParser.KVAR)
            self.state = 42 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self.var_decl()
                self.state = 44 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==IGParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(IGParser.ID, 0)

        def EQ(self):
            return self.getToken(IGParser.EQ, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(IGParser.NUM)
            else:
                return self.getToken(IGParser.NUM, i)

        def SEMI(self):
            return self.getToken(IGParser.SEMI, 0)

        def getRuleIndex(self):
            return IGParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = IGParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(IGParser.ID)
            self.state = 47
            self.match(IGParser.EQ)
            self.state = 48
            self.match(IGParser.NUM)
            self.state = 49
            self.match(IGParser.T__1)
            self.state = 50
            self.match(IGParser.NUM)
            self.state = 51
            self.match(IGParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Reg_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KREG(self):
            return self.getToken(IGParser.KREG, 0)

        def reg_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IGParser.Reg_declContext)
            else:
                return self.getTypedRuleContext(IGParser.Reg_declContext,i)


        def getRuleIndex(self):
            return IGParser.RULE_reg_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReg_block" ):
                listener.enterReg_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReg_block" ):
                listener.exitReg_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReg_block" ):
                return visitor.visitReg_block(self)
            else:
                return visitor.visitChildren(self)




    def reg_block(self):

        localctx = IGParser.Reg_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_reg_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(IGParser.KREG)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.reg_decl()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==IGParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Reg_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(IGParser.ID)
            else:
                return self.getToken(IGParser.ID, i)

        def reg_expr(self):
            return self.getTypedRuleContext(IGParser.Reg_exprContext,0)


        def CIBLE(self):
            return self.getToken(IGParser.CIBLE, 0)

        def SEMI(self):
            return self.getToken(IGParser.SEMI, 0)

        def getRuleIndex(self):
            return IGParser.RULE_reg_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReg_decl" ):
                listener.enterReg_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReg_decl" ):
                listener.exitReg_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReg_decl" ):
                return visitor.visitReg_decl(self)
            else:
                return visitor.visitChildren(self)




    def reg_decl(self):

        localctx = IGParser.Reg_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_reg_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(IGParser.ID)
            self.state = 60
            self.match(IGParser.T__2)
            self.state = 61
            self.reg_expr(0)
            self.state = 62
            self.match(IGParser.T__3)
            self.state = 63
            self.match(IGParser.CIBLE)
            self.state = 65 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.match(IGParser.ID)
                self.state = 67 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==IGParser.ID):
                    break

            self.state = 69
            self.match(IGParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Reg_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IGParser.RULE_reg_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Expr_negContext(Reg_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IGParser.Reg_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEG(self):
            return self.getToken(IGParser.NEG, 0)
        def reg_expr(self):
            return self.getTypedRuleContext(IGParser.Reg_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_neg" ):
                listener.enterExpr_neg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_neg" ):
                listener.exitExpr_neg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_neg" ):
                return visitor.visitExpr_neg(self)
            else:
                return visitor.visitChildren(self)


    class Expr_bool_opContext(Reg_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IGParser.Reg_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def reg_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IGParser.Reg_exprContext)
            else:
                return self.getTypedRuleContext(IGParser.Reg_exprContext,i)

        def BOOL_OP(self):
            return self.getToken(IGParser.BOOL_OP, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_bool_op" ):
                listener.enterExpr_bool_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_bool_op" ):
                listener.exitExpr_bool_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_bool_op" ):
                return visitor.visitExpr_bool_op(self)
            else:
                return visitor.visitChildren(self)


    class Expr_bracketsContext(Reg_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IGParser.Reg_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def reg_expr(self):
            return self.getTypedRuleContext(IGParser.Reg_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_brackets" ):
                listener.enterExpr_brackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_brackets" ):
                listener.exitExpr_brackets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_brackets" ):
                return visitor.visitExpr_brackets(self)
            else:
                return visitor.visitChildren(self)


    class Expr_atomeContext(Reg_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IGParser.Reg_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(IGParser.ID, 0)
        def SEUIL(self):
            return self.getToken(IGParser.SEUIL, 0)
        def NUM(self):
            return self.getToken(IGParser.NUM, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_atome" ):
                listener.enterExpr_atome(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_atome" ):
                listener.exitExpr_atome(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_atome" ):
                return visitor.visitExpr_atome(self)
            else:
                return visitor.visitChildren(self)


    class Expr_mux_nameContext(Reg_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IGParser.Reg_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(IGParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_mux_name" ):
                listener.enterExpr_mux_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_mux_name" ):
                listener.exitExpr_mux_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_mux_name" ):
                return visitor.visitExpr_mux_name(self)
            else:
                return visitor.visitChildren(self)



    def reg_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = IGParser.Reg_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_reg_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = IGParser.Expr_negContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 72
                self.match(IGParser.NEG)
                self.state = 73
                self.reg_expr(5)
                pass

            elif la_ == 2:
                localctx = IGParser.Expr_bracketsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 74
                self.match(IGParser.T__4)
                self.state = 75
                self.reg_expr(0)
                self.state = 76
                self.match(IGParser.T__5)
                pass

            elif la_ == 3:
                localctx = IGParser.Expr_atomeContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 78
                self.match(IGParser.ID)
                self.state = 79
                self.match(IGParser.SEUIL)
                self.state = 80
                self.match(IGParser.NUM)
                pass

            elif la_ == 4:
                localctx = IGParser.Expr_mux_nameContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 81
                self.match(IGParser.ID)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 89
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = IGParser.Expr_bool_opContext(self, IGParser.Reg_exprContext(self, _parentctx, _parentState))
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_reg_expr)
                    self.state = 84
                    if not self.precpred(self._ctx, 4):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                    self.state = 85
                    self.match(IGParser.BOOL_OP)
                    self.state = 86
                    self.reg_expr(5) 
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Hybrid_hoare_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KHYBRIDHOARE(self):
            return self.getToken(IGParser.KHYBRIDHOARE, 0)

        def hybrid_hoare_decl(self):
            return self.getTypedRuleContext(IGParser.Hybrid_hoare_declContext,0)


        def getRuleIndex(self):
            return IGParser.RULE_hybrid_hoare_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHybrid_hoare_block" ):
                listener.enterHybrid_hoare_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHybrid_hoare_block" ):
                listener.exitHybrid_hoare_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHybrid_hoare_block" ):
                return visitor.visitHybrid_hoare_block(self)
            else:
                return visitor.visitChildren(self)




    def hybrid_hoare_block(self):

        localctx = IGParser.Hybrid_hoare_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_hybrid_hoare_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(IGParser.KHYBRIDHOARE)
            self.state = 93
            self.hybrid_hoare_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Hybrid_hoare_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def hybrid_hoare_pre_decl(self):
            return self.getTypedRuleContext(IGParser.Hybrid_hoare_pre_declContext,0)


        def hybrid_hoare_trace_decl(self):
            return self.getTypedRuleContext(IGParser.Hybrid_hoare_trace_declContext,0)


        def hybrid_hoare_post_decl(self):
            return self.getTypedRuleContext(IGParser.Hybrid_hoare_post_declContext,0)


        def getRuleIndex(self):
            return IGParser.RULE_hybrid_hoare_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHybrid_hoare_decl" ):
                listener.enterHybrid_hoare_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHybrid_hoare_decl" ):
                listener.exitHybrid_hoare_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHybrid_hoare_decl" ):
                return visitor.visitHybrid_hoare_decl(self)
            else:
                return visitor.visitChildren(self)




    def hybrid_hoare_decl(self):

        localctx = IGParser.Hybrid_hoare_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_hybrid_hoare_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.hybrid_hoare_pre_decl()
            self.state = 96
            self.hybrid_hoare_trace_decl()
            self.state = 97
            self.hybrid_hoare_post_decl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Hybrid_hoare_pre_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KPRE(self):
            return self.getToken(IGParser.KPRE, 0)

        def getRuleIndex(self):
            return IGParser.RULE_hybrid_hoare_pre_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHybrid_hoare_pre_decl" ):
                listener.enterHybrid_hoare_pre_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHybrid_hoare_pre_decl" ):
                listener.exitHybrid_hoare_pre_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHybrid_hoare_pre_decl" ):
                return visitor.visitHybrid_hoare_pre_decl(self)
            else:
                return visitor.visitChildren(self)




    def hybrid_hoare_pre_decl(self):

        localctx = IGParser.Hybrid_hoare_pre_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_hybrid_hoare_pre_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(IGParser.KPRE)
            self.state = 100
            self.match(IGParser.T__6)
            self.state = 101
            self.match(IGParser.T__7)
            self.state = 102
            self.match(IGParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Hybrid_hoare_post_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KPOST(self):
            return self.getToken(IGParser.KPOST, 0)

        def SEMI(self):
            return self.getToken(IGParser.SEMI, 0)

        def discrete_condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IGParser.Discrete_conditionContext)
            else:
                return self.getTypedRuleContext(IGParser.Discrete_conditionContext,i)


        def hybrid_condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IGParser.Hybrid_conditionContext)
            else:
                return self.getTypedRuleContext(IGParser.Hybrid_conditionContext,i)


        def getRuleIndex(self):
            return IGParser.RULE_hybrid_hoare_post_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHybrid_hoare_post_decl" ):
                listener.enterHybrid_hoare_post_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHybrid_hoare_post_decl" ):
                listener.exitHybrid_hoare_post_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHybrid_hoare_post_decl" ):
                return visitor.visitHybrid_hoare_post_decl(self)
            else:
                return visitor.visitChildren(self)




    def hybrid_hoare_post_decl(self):

        localctx = IGParser.Hybrid_hoare_post_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_hybrid_hoare_post_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(IGParser.KPOST)
            self.state = 105
            self.match(IGParser.T__6)
            self.state = 106
            self.match(IGParser.T__7)
            self.state = 111 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 107
                self.discrete_condition()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==IGParser.T__9:
                    self.state = 108
                    self.match(IGParser.T__9)


                self.state = 113 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==IGParser.T__10 or _la==IGParser.NOKB):
                    break

            self.state = 115
            self.match(IGParser.SEMI)
            self.state = 120 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.hybrid_condition()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==IGParser.T__9:
                    self.state = 117
                    self.match(IGParser.T__9)


                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==IGParser.T__11 or _la==IGParser.NOKB):
                    break

            self.state = 124
            self.match(IGParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Discrete_conditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(IGParser.ID, 0)

        def EQ(self):
            return self.getToken(IGParser.EQ, 0)

        def NUM(self):
            return self.getToken(IGParser.NUM, 0)

        def NOKB(self):
            return self.getToken(IGParser.NOKB, 0)

        def getRuleIndex(self):
            return IGParser.RULE_discrete_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiscrete_condition" ):
                listener.enterDiscrete_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiscrete_condition" ):
                listener.exitDiscrete_condition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiscrete_condition" ):
                return visitor.visitDiscrete_condition(self)
            else:
                return visitor.visitChildren(self)




    def discrete_condition(self):

        localctx = IGParser.Discrete_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_discrete_condition)
        try:
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [IGParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(IGParser.T__10)
                self.state = 127
                self.match(IGParser.T__4)
                self.state = 128
                self.match(IGParser.ID)
                self.state = 129
                self.match(IGParser.T__5)
                self.state = 130
                self.match(IGParser.EQ)
                self.state = 131
                self.match(IGParser.NUM)
                pass
            elif token in [IGParser.NOKB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(IGParser.NOKB)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Hybrid_conditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(IGParser.ID, 0)

        def EQ(self):
            return self.getToken(IGParser.EQ, 0)

        def FLOAT(self):
            return self.getToken(IGParser.FLOAT, 0)

        def NOKB(self):
            return self.getToken(IGParser.NOKB, 0)
